@@ -6,7 +6,7 @@ CXXFLAGS=$(CWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
 LIBS=$(OTHERLIBS)
 
 OBJS=MachineComponent.o MVME187Machine.o TestM88KMachine.o TestMIPSMachine.o \
-	SGI_IP30_Machine.o SGI_IP32_Machine.o
+	HP700RXMachine.o CycloneVHMachine.o SGI_IP30_Machine.o SGI_IP32_Machine.o
 
 all: $(OBJS)
 
